# workspace

./: .commitlintrc.js  .gitattributes  .gitignore  .gitmodules  LICENSE.txt  README.md  package-lock.json  package.json
3d_renderer/software_rendering/test/: CMakeLists.txt  bresenham_line.cpp  triangle.cpp
compile/gc_book/: .gitignore  CMakeLists.txt  README.md
compile/gc_book/spec/: test_mark_sweep.cpp
compile/gc_book/src/: defines.hpp  mark_sweep.cpp  mark_sweep.hpp
compile/naive_compiler/: .gitignore  Cargo.toml  LICENSE  README.md
compile/naive_compiler/cdoc/: clex_step.md  cparser.md  cparser_automata.md
compile/naive_compiler/clex/: Cargo.toml
compile/naive_compiler/clex/src/: identifier.rs  keyword.rs  lex.rs  lib.rs  operator.rs  pattern.rs
compile/naive_compiler/clr1/: Cargo.toml
compile/naive_compiler/clr1/src/: core.rs  item.rs  itoken.rs  lib.rs  production.rs  tree.rs
compile/naive_compiler/cparser/: Cargo.toml
compile/naive_compiler/cparser/src/: grammars.rs
compile/naive_compiler/regex_engine/: Cargo.toml
compile/naive_compiler/regex_engine/src/: core.rs  ext.rs
compile/naive_compiler/src/: main.rs
compile/naive_compiler/src/command/: lex.rs  mod.rs  parse.rs
compile/naive_compiler/yalc/: .gitignore  Cargo.toml  README.md
compile/naive_compiler/yalc/src/: codegen.rs  emitter.rs  lex.rs  lib.rs
compile/naive_compiler/yalc/tests/: parse_by_example.rs  should_not_parse.rs
compile/yatc/: .gitignore  Cargo.toml  README.md  grammar.ebnf
compile/yatc/src/: codegen.rs  cstring_manager.rs  driver.rs  lexer.rs  lib.rs  parser.rs  target.rs  util.rs
cpp/boost_cookbook/: .gitignore  CMakeLists.txt  main.cpp
cpp/emcpp/impls/: CMakeLists.txt  auto.cpp  concurrency.cpp  lambda.cpp  modern_cpp.cpp  rr_mv_fw.cpp  smart_ptr.cpp  trim.cpp  type_inference.cpp
cpp/emcpp/impls/smart_ptr/: widget.cpp  widget.h
cpp/prog_pearls/: CMakeLists.txt
cpp/prog_pearls/ch1/: CMakeLists.txt  p1.cpp  p2.cpp
cpp/prog_pearls/data/ch1/: p1_i.csv  p1_o.csv
cpp/prog_pearls/shared/: io_utils.hpp
database/comp3010/exp4/: .gitignore  CMakeLists.txt  main.cpp
database/comp3010/exp4/btree/: bptree.cpp  bptree.hpp  btree.cpp  btree.hpp  btree_util.hpp  tree.hpp
database/comp3010/exp4/core/: core.hpp  extension.hpp  functools.hpp  query.cpp  query.hpp
database/comp3010/exp4/include/: command.hpp  extmem_storage.hpp  factory.hpp  pager.hpp  repl.hpp  shim.hpp  statement.hpp  table.hpp  vfs.hpp
database/comp3010/exp4/repl/: command.cpp  command.hpp  record.hpp  repl.hpp  statement.cpp  statement.hpp  type_util.hpp
database/comp3010/exp4/source/: command.cpp  statement.cpp
database/comp3010/exp4/spec/: core_extension_spec.cpp  extmem_dev_spec.cpp
game/ge_demo/: .gitignore  CMakeLists.txt
game/ge_demo/framework/common/: CMakeLists.txt  base_application.cpp
game/ge_demo/framework/interface/: i_application.hpp  interface.hpp
graphics/opencv_learning/: CMakeLists.txt
graphics/opgl_sbs/: CMakeLists.txt  CMakeSettings.json
graphics/opgl_sbs/ch2/: CMakeLists.txt  hello_vertex.cpp
graphics/opgl_sbs/ch3/: CMakeLists.txt
graphics/opgl_sbs/ch4/: shader.ps.glsl  shader.vs.glsl
graphics/opgl_sbs/software_rendering/include/: triangle.h
graphics/software_rendering/: CMakeLists.txt
graphics/software_rendering/impl/: model.cpp
graphics/software_rendering/include/: util.h
graphics/software_rendering/test/: bresenham_line.cpp  home.cpp  triangle.cpp
opgl_sbs/: .gitignore  CMakeLists.txt
opgl_sbs/ch1/: CMakeLists.txt  open_window.cpp
opgl_sbs/ch2/: hello_vertex.cpp
opgl_sbs/ch3/: first_triangle.cpp
opgl_sbs/ch4/: shader.cpp
opgl_sbs/ch5/: CMakeLists.txt
practice/codewars/: .gitignore  .reek.yml  .rubocop.yml  CMakeLists.txt  Cargo.toml  Gemfile  codewars.csproj  package.json  pom.xml  pubspec.yaml  tsconfig.json
practice/codewars/codewars_cpp/: .gitignore  CMakeLists.txt  cpp.hint
practice/codewars/codewars_cpp/spec/: test.cpp
practice/codewars/codewars_cs/: .gitignore  codewars.sln
practice/codewars/codewars_dart/: .gitignore
practice/codewars/codewars_hs/: .gitignore  ChangeLog.md  LICENSE  README.md  package.yaml  stack.yaml
practice/codewars/codewars_java/: .gitignore  build.gradle  pom.xml
practice/codewars/codewars_py/: .flake8  .gitignore  requirements.txt
practice/codewars/codewars_rb/: .gitignore  .reek.yml  .rubocop.yml  Gemfile
practice/codewars/codewars_rb/spec/: spec_helper.rb
practice/codewars/codewars_rs/: .gitignore  Cargo.toml
practice/codewars/codewars_rs/src/: lib.rs
practice/codewars/codewars_web/: .gitignore  package.json  tsconfig.json
practice/codewars/spec/: __init__.py  spec_helper.rb
practice/codewars/spec/fivekyu/: a_chain_adding_function_test.cpp  num_of_trailing_zeros_of_n_test.cpp  return_substring_instance_count_2_spec.rb  rgb_to_hex_conversation_spec.rb  test_bird_mountain.py  test_fixed_length_integer_partitions.py  tic_tac_toe_checks.spec.ts  weight_for_weight.spec.ts  where_my_anagrams_at_spec.rb
practice/codewars/spec/fourkyu/: BirdMountainTheRiverTest.java  path_finder1_can_you_reach_the_exit_test.cpp  path_finder2_shortest_path_test.cpp  path_finder4_where_are_you_test.cpp  sudoku_solution_validator_test.cpp  sum_strings_test.cpp
practice/codewars/spec/sevenkyu/: fun_with_lists.spec.ts
practice/codewars/src/: Program.cs  lib.rs  main.rs
practice/csp/: .gitignore  CMakeLists.txt  Makefile.win  csp.cbp  csp.depend  csp.dev  csp.layout
practice/csp/src/: test.cpp
rust/actix_learn/: .gitignore  Cargo.toml
rust/dive_into_rust/: Cargo.toml  build.rs
rust/dive_into_rust/complicated_libc/: .gitignore  CMakeLists.txt  Cargo.toml
rust/dive_into_rust/doc_test/: Cargo.toml
rust/dive_into_rust/hello_macro/: Cargo.toml
rust/dive_into_rust/hello_macro_derive/: Cargo.toml
rust/programming_rust/iron-gcd/: Cargo.toml
rust/rust_wasm/wasm-game-of-life/: .gitignore  Cargo.toml
system/comp3026/bank-contract/: .gitignore  Cargo.toml
web/swc-plugin-test/: .editorconfig  Cargo.toml  package.json  rustfmt.toml
web/swc-plugin-test/src/: lib.rs
(+1776 files in other folders)
