cmake_minimum_required(VERSION 3.10)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)
project (OPGL_SBS)
find_package(Boost REQUIRED)
find_package(GLUT REQUIRED)
find_package(GLEW REQUIRED)
find_package(glm CONFIG REQUIRED)
include_directories("${Boost_INCLUDE_DIR}")
add_subdirectory(ch1)
add_subdirectory(ch2)