[package]
authors = ["lonelyhentai <master@evernightfireworks.com>"]
edition = "2018"
name = "naive_compiler"
version = "0.2.1"

[dependencies]
clap = "^2.32.0"
lazy_static = "^1.3.0"
serde_json = "1.0.39"

[dependencies.clex]
path = "./clex"
version = "0.2.0"

[dependencies.cparser]
path = "./cparser"
version = "0.0.2"

[dependencies.clr1]
path = "./clr1"
version = "0.0.2"
