[package]
name = "yatc"
version = "0.0.1"
authors = ["lonelyhentai <master@evernightfireworks>"]

[lib]
name = "yatc"
path = "src/lib.rs"

[dependencies]
docopt = "0.6"
regex = "1.0"
lazy_static = "1.0"
serde = "1.0"
serde_derive = "1.0"
llvm-sys = "*"
llvm-sys-wrapper="*"
libc="*"
rustc-serialize = "*"
serde_json = "1.0"
