cmake_minimum_required(VERSION 3.7)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 14)
project (GE_DEMO)
find_package(Boost REQUIRED)
include_directories("${Boost_INCLUDE_DIR}")
include_directories("${PROJECT_SOURCE_DIR}/framework/common")
include_directories("${PROJECT_SOURCE_DIR}/framework/interface")
include_directories("${PROJECT_SOURCE_DIR}/platform/windows/include")
add_subdirectory(framework)
add_subdirectory(empty)
add_subdirectory(platform)