[package]
name = "actix_learn"
version = "0.0.1"
authors = ["lonelyhentai <master@evernightfireworks.com>"]
edition = "2018"

[lib]
name = "actix_learn"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.7"
