[package]
name = "dive_into_rust"
version = "0.1.0"
authors = ["lonelyhentai <master@evernightfireworks.com>"]
edition = "2018"
build = "./build.rs"
# links = "rslib"

[dependencies]
hello_macro = { path = "./hello_macro" }
hello_macro_derive = { path = "./hello_macro_derive" }
scoped_threadpool = "^0.1.9"
dirs = "^1.0.4"
threadpool = "^1.7.1"
parking_lot = "^0.6.4"
crossbeam = "^0.4.1"
crossbeam-channel = "^0.2.6"
rayon = "^1.0.2"
failure = "^0.1.2"
