[package]
name = "swc-plugin-test"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
pretty_assertions = "1.3.0"
serde = "1"
swc_atoms = "0.4.43"
swc_common = "0.30.5"
swc_core = { version = "0.74.*", features = [
  "ecma_plugin_transform",
  "ecma_quote",
  "ecma_utils",
  "ecma_parser",
  "ecma_parser_typescript"
] }

# .cargo/config defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
