[package]
name = "wasm-game-of-life"
version = "0.1.0"
authors = ["lonelyhentai <master@evernightfireworks.com>"]
edition = "2018"

[package.metadata.scripts]
wasm = "wasm-pack build --scope lonelyhentai"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wee_alloc = { version = "0.4.4", optional = true }
wasm-bindgen = "0.2.48"
console_error_panic_hook ={version = "0.1.6", optional = true}

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
opt-level = "s"
