[package]
name = "wasm-game-of-life"
version = "0.1.0"
authors = ["lonelyhentai <master@evernightfireworks.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wee_alloc = { version = "0.4.4", optional = true }
wasm-bindgen = "0.2.48"
console_error_panic_hook ={version = "0.1.6", optional = true}
js-sys = "0.3.25"
fixedbitset = "0.1.9"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
]


[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
opt-level = "s"

[package.metadata.scripts]
wasm = "wasm-pack build --scope lonelyhentai"
wasm-test = "wasm-pack test --firefox --headless"
wasm-bench = "cargo bench | tee benches/before.log"
