[package]
name = "bank-contract"
version = "0.1.0"
authors = ["lonelyhentai <master@evernightfireworks.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[lib]
crate-type = ["cdylib"]

[dependencies]
rust_decimal = "1.0.3"
rust_decimal_macros = "1.0.3"
smart-contract = "0.2.2"
smart-contract-macros = "0.2.2"
hex = "0.4.0"
