find_package(Boost REQUIRED system container filesystem)
file(GLOB_RECURSE EXTMEMFS_SOURCES basic/* extmem/*)
add_library(extmemfs STATIC ${EXTMEMFS_SOURCES})
set_target_properties(extmemfs PROPERTIES LINKER_LANGUAGE CXX)
target_include_directories(extmemfs PRIVATE ${Boost_INCLUDE_DIRS})
target_include_directories(extmemfs PUBLIC basic extmem)
target_link_libraries(extmemfs PUBLIC ${Boost_LIBRARIES})

find_package(Catch2 CONFIG REQUIRED)
file(GLOB_RECURSE EXTMEMFS_TEST_SOURCES spec/*)
add_executable(extmemfs_test test.cpp ${EXTMEMFS_TEST_SOURCES})
set_target_properties(extmemfs_test PROPERTIES LINKER_LANGUAGE CXX)
target_include_directories(extmemfs_test PRIVATE ${Catch2_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS} extmem uglyfs)
target_link_libraries(extmemfs_test PRIVATE ${Boost_LIBRARIES} Catch2::Catch2 extmemfs extmem)
add_custom_command(TARGET extmemfs_test PRE_BUILD COMMAND ${CMAKE_COMMAND} -E make_directory ${EXECUTABLE_OUTPUT_PATH}/data)